Try Caesar dictionary crack, add some unit tests

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test --require ts-node/register ./test/*.test.ts"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/isaaclyman/kryptos-typescript#readme",
   "devDependencies": {
-    "@types/node": "^20.11.7"
+    "@types/node": "^20.11.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
